kube/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: grow-a-tree-image-server
  namespace: default
  labels:
    app: grow-a-tree-image-server
spec:
  type: ClusterIP
  ports:
  - port: 9090
  selector:
    app: grow-a-tree-image-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grow-a-tree-image-server
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grow-a-tree-image-server
  template:
    metadata:
      labels:
        app: grow-a-tree-image-server
    spec:
      containers:
        - name: grow-a-tree-image-server
          image: gcr.io/rock-solid-robots/grow-a-tree-image-server:75d8dcb2-7198-4f09-9d5f-d4f14f501237
          ports:
            - containerPort: 9090
